Fixed media-wrapper spacing issue

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -6,7 +6,7 @@
 
 body {
     font-family: $default-font;
-    font-size: 14px;
+    font-size: 16px;
     color: $primary-color;
 }
 
