--- a/sass/modules/_box.scss
+++ b/sass/modules/_box.scss
@@ -78,18 +78,18 @@
         .box1,
         .box2,
         .box3 {
-            grid-template-columns: repeat(10, 1.25rem);
-            grid-template-rows: minmax(1.25rem, auto);
-            gap: 3.0625rem; //custom value that balanced these boxes
+            grid-template-columns: repeat(10, 1rem);
+            grid-template-rows: minmax(1rem, auto);
+            gap: 3.5625rem; //custom value that balanced these boxes
             // separator margin
-            margin-right: 2.5rem;
+            margin-right: 3.9rem;
         }
 
         .box1 div,
         .box2 div,
         .box3 div {
-            width: 1.25rem;
-            height: 1.25rem;
+            width: 1rem;
+            height: 1rem;
         }
 
         .box1 div,
