--- a/sass/modules/_logo.scss
+++ b/sass/modules/_logo.scss
@@ -17,8 +17,8 @@
 
 @include medium-and-above {
     .menu-logo {
-        width: 182px;
-        height: 66px;
+        width: 185px;
+        height: 75px;
         margin-left: 5rem;
     }
 
