--- a/sass/modules/_media.scss
+++ b/sass/modules/_media.scss
@@ -92,7 +92,8 @@
     .outer-wrapper {
         width: 540px;
         height: 1187px;
-        margin-left: 9.225rem;
+        // margin-left: 9.225rem;
+        margin-left: 4.2rem;
         transform: rotate(-90deg) translateX(-540px);
         transform-origin: top left;
         position: absolute;
@@ -100,6 +101,7 @@
         overflow-x: hidden;
         scrollbar-width: none;
         -ms-overflow-style: none;
+
 
         .wrapper {
             width: 1187px;
